--- a/Rocket/index.html
+++ b/Rocket/index.html
@@ -13,7 +13,7 @@
     </head>
 
     <body>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./style.css">
          <header>
           <h1>Rocket<span>Coffee</span></h1>
           <p>Aberto todos os dias, 8h - 21h</p>
