--- a/Rocket/index.html
+++ b/Rocket/index.html
@@ -20,16 +20,16 @@
         </header>
 
         <section>
-            <h2>Brunch</h2>
+            <h2>Doces</h2>
 
             <ul>
                 <li>
                     <div class="details">
                         <h3>Waffle doce</h3>
-                        <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        <p class="description">Waffle doce, acompanha calda de chocolate e mel.</p>
                     </div>
                     <strong class="price">
-                        R$37.70
+                        R$15.90
                     </strong>
 
                 </li>
@@ -37,13 +37,69 @@
                 <li>
                     <div class="details">
                         <h3>Maçã do amor</h3>
-                        <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        <p class="description">Maçã caramelizada sabores chocolate com granulado ou calda açucarada. </p>
                     </div>
                     <strong class="price">
                         R$10.50
                     </strong>
 
                 </li>
+
+                <li>
+                    <div class="details">
+                        <h3>Torta de limão</h3>
+                        <p class="description">Torta assada no forno e recheada com um creme a base de limão.</p>
+                    </div>
+                    <strong class="price">
+                        R$13.90
+                    </strong>
+
+                </li>
+
+            </ul>
+
+        </section>
+
+        <section>
+            <h2>Salgados</h2>
+
+            <ul>
+                <li>
+                    <div class="details">
+                        <h3>Pão de queijo</h3>
+                        <p class="description">Pão de queijo feito com receita caseira, não acompanha recheio.</p>
+                    </div>
+                    <strong class="price">
+                        R$5.00
+                    </strong>
+
+                </li>
+
+                <li>
+                    <div class="details">
+                        <h3>Massas assadas</h3>
+                        <p class="description">Assados recheados com carne de frango + catupiry ou presunto e queijo.</p>
+                    </div>
+                    <strong class="price">
+                        R$14.90
+                    </strong>
+
+
+                </li>
+
+                <li>
+                    <div class="details">
+                        <h3>Croquete</h3>
+                        <p class="description">Salgado frito recheado com presunto e queijo.</p>
+                    </div>
+                    <strong class="price">
+                        R$9.50  
+                    </strong>
+
+
+                </li>
+
+                
 
             </ul>
 
@@ -56,7 +112,7 @@
                 <li>
                     <div class="details">
                         <h3>Vinho</h3>
-                        <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        <p class="description">Garrafa de vinho tinto 900ML, opções de vinho suave e seco disponíveis</p>
                     </div>
                     <strong class="price">
                         R$35.90
@@ -66,8 +122,8 @@
 
                 <li>
                     <div class="details">
-                        <h3>Refrigerante Lata</h3>
-                        <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        <h3>Refrigerante lata</h3>
+                        <p class="description">Refrigerante de lata 350ML, diversas marcas, consultar outras opções.</p>
                     </div>
                     <strong class="price">
                         R$5.00
@@ -93,5 +149,8 @@
             </ul>
 
         </section>
+
+
+        
     </body>
 </html>
